[package]
name = "basic"
version = "0.1.0"
authors = ["hackartists <hackartists@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.6.0-alpha.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }

[features]
default = []
server = ["dioxus/server"]
# lambda = ["dioxus-aws/lambda"]
web = ["dioxus/web"]
